Fix to name flicker and added toggleable sidebar

--- a/react-vite/src/components/SideNavbar/SideNavbar.css
+++ b/react-vite/src/components/SideNavbar/SideNavbar.css
@@ -6,6 +6,44 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid rgb(200 200 200 / 50%);
+    position: relative;
+    transition: all 0.5s;
+}
+
+.minimize-side-navbar {
+    min-width: 12px;
+    width: 12px;
+}
+
+.minimize-side-navbar>h3,
+.minimize-side-navbar>a,
+.minimize-side-navbar>ul {
+    display: none;
+}
+
+.side-navbar-toggle {
+    position: absolute;
+    right: -12px;
+    top: 17px;
+    background-color: inherit;
+    color: inherit;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    border: 1px solid rgb(200 200 200 / 50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+.side-navbar-toggle:hover {
+    background-image: var(--background-hover);
+}
+
+.side-navbar-toggle:active {
+    background-image: var(--background-active);
 }
 
 .side-navbar-wrapper>h3 {
